将‘透明框’该为‘透明框1’

--- a/learn/cyt/20191128 + css盒模型练习/20191128 + web前端之css.html
+++ b/learn/cyt/20191128 + css盒模型练习/20191128 + web前端之css.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -82,7 +82,7 @@
 	 <div id="sum">
 		<div class="first">
 			<div class="transbox">
-				<p>透明框</p>
+				<p>透明框1</p>
 			</div>
 		</div>
 		<div class="second"></div>
