--- a/learn/cyt/2020109 - 2020112/阅读完协议才能单击注册按钮.html
+++ b/learn/cyt/2020109 - 2020112/阅读完协议才能单击注册按钮.html
@@ -13,7 +13,7 @@
 	</p>
 
 	<script type="text/javascript">
-		function on_scroll_reg(thisid){
+		function on_scroll_reg(thisid){    //用户注册按钮不能使用
 			textareaReg = document.getElementById(thisid);
 			if((textareaReg.scrollTop + textareaReg.clientHeight)>=textareaReg.scrollHeight) {
 				document.getElementById("id-btn-reg").disabled = false;
